<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CommandResultActivity" >

    <item android:id="@+id/action_find"
        android:title="@string/action_find"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_toggle_follow"
        android:title="@string/action_toggle_follow"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:checkable="true"
        android:checked="true"
        />
    <item android:id="@+id/action_toggle_word_wrap"
        android:title="@string/action_toggle_word_wrap"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:checkable="true"
        />
    <item android:id="@+id/action_increase_font"
        android:title="@string/action_increase_font"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_decrease_font"
        android:title="@string/action_decrease_font"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
